--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
+  "dependencies": {
+    "@actions/core": "^1.9.0",
+    "@actions/github": "^5.0.3",
+    "@octokit/rest": "^19.0.3"
+  },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.3",
+    "@octokit/openapi-types": "^12.11.0",
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
