--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     "target": "es2017",
     "typeRoots": [ "node_modules/@types" ]
   },
-  "include": [ "./src/**/*.ts" ],
+  "include": [ "./src/**/*.ts", "./types/**/*.ts" ],
   "exclude": [ "node_modules" ]
 }
