--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "scripts": {
     "build:dev": "tsc",
     "build": "ncc build src/index.ts -C -m --license licenses.txt",
-    "test": "jest --silent",
+    "lint": "eslint 'src/*.ts'",
+    "lint-staged": "lint-staged",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "test": "jest --silent"
   },
   "dependencies": {
     "@actions/core": "^1.9.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.3",
     "@octokit/openapi-types": "^12.11.0",
+    "@semantic-release/github": "^8.0.5",
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
@@ -38,6 +40,7 @@
     "jest": "^28.1.3",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "semantic-release": "^19.0.3",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
