--- a/.github/workflows/main-push.yml
+++ b/.github/workflows/main-push.yml
@@ -1,9 +1,9 @@
-name: Push to master
+name: Push to main
 
 on:
   push:
     branches:
-      - master
+      - main
     tags-ignore:
       - '*'
 
