--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "downlevelIteration": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "importHelpers": true,
+    "importHelpers": false,
     "lib": [ "es2017", "esnext" ],
     "module": "node16",
     "moduleResolution": "node",
