chore(deps): dependabot batcher updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     "experimentalDecorators": true,
     "importHelpers": false,
     "lib": [ "es2017", "esnext" ],
-    "module": "node16",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "outDir": "./dist",
